--- a/styles.css
+++ b/styles.css
@@ -21,31 +21,27 @@ h1 {
     touch-action: none;
 }
 
-#player, #love {
+#player, #love, .obstacle {
     width: 40px;
     height: 40px;
+    font-size: 30px;
+    text-align: center;
+    line-height: 40px;
     position: absolute;
-    border-radius: 50%;
 }
 
 #player {
-    background-color: blue;
     top: 10px;
     left: 10px;
 }
 
 #love {
-    background-color: red;
     bottom: 10px;
     right: 10px;
 }
 
 .obstacle {
-    width: 50px;
-    height: 50px;
-    background-color: brown;
-    position: absolute;
-    border-radius: 10px;
+    font-size: 35px;
 }
 
 #message {
@@ -81,14 +77,11 @@ h1 {
         height: 90vw;
     }
     
-    #player, #love {
+    #player, #love, .obstacle {
         width: 10vw;
         height: 10vw;
-    }
-
-    .obstacle {
-        width: 12vw;
-        height: 12vw;
+        font-size: 7vw;
+        line-height: 10vw;
     }
 
     #controls button {
